--- a/iosApp/circle.yml
+++ b/iosApp/circle.yml
@@ -20,6 +20,15 @@ general:
     #DIR='xcodebuild -workspace "Yabbit.xcworkspace" -scheme "Yabbit" -configuration "Debug" -showBuildSettings | grep '^\s*BUILT_PRODUCTS_DIR' | head -n 1 | sed 's/^\(.*\)\s*=\s*\(.*\)$/\2/''
     #- instruments -t "/Applications/Xcode-6.3.1.app/Contents/Applications/Instruments.app/Contents/PlugIns/AutomationInstrument.xrplugin/Contents/Resources/Automation.tracetemplate" -w "iPhone 5s (8.3 Simulator)" "$DIR/Yabbit.app" -e UIASCRIPT "scripts/automation.js" -e UIARESULTSPATH $CIRCLE_ARTIFACTS/
     #- /bin/sh scripts/ui.sh
+test:
+  override:
+    - set -o pipefail && xcodebuild -workspace 'iosApp/Yabbit.xcworkspace' -scheme 'Yabbit'
+      -sdk iphonesimulator -destination "platform=iOS Simulator,name=iPhone 7"
+      GCC_INSTRUMENT_PROGRAM_FLOW_ARCS=YES GCC_GENERATE_TEST_COVERAGE_FILES=YES clean test | xcpretty -c
+      --report junit --output ${CIRCLE_TEST_REPORTS}/junit.xml
+
+
+
 deployment:
   testfairy:
     branch: development
